<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notebook</string>
    <string name="sort_title">Title</string>
    <string name="sort_creationdate">Creation</string>
    <string name="pin_note">Pin</string>
    <string name="delete_note">Delete</string>
    <string name="share_note">Share</string>

    <string name="dummy_text">Dummy Text</string>
    <string name="create_note_description">Create and Modify a Note</string>
    <string name="Create">Create new Note</string>
    <string name="Edit">Edit Note</string>
    <string name="Confirm_bt">Confirm</string>
    <string name="Abort_bt">Abort</string>
    <string name="Title">Title:</string>
    <string name="Body_hint">Enter Text here:</string>
    <string name="tag_information"><![CDATA[\n\nTo tag a note write \"#<tag> \" into the text body for every tag you want to add, where <tag> is replaced by the wanted tag]]></string>
    <string name="export_bt">Export notes</string>
    <string name="darkmode_bt">Darkmode 🧛</string>
    <string name="night_mode">Night Mode 🧛</string>
    <string name="day_mode">Day Mode</string>
    <string name="import_string">Import notes</string>
    <string name="export_string">Export notes</string>
    <string name="local_string">Change Language</string>
    <string name="search_here">Search here</string>
    <string name="sort_size">Size</string>
    <string name="text_to_speech">Read note</string>
    <string name="created_at_location">%1$s</string>
    <string name="about">About</string>
    <string name="about_made">Made with 🥵🔥 by</string>
    <string name="about_names">Philipp\nBernhard\nJuri\nMichael\nMarko\nAndreas\nPaul\nAhmed</string>

</resources>
